# onnx-test

./: .gitattributes  Cargo.toml  README.md
all-MiniLM-L6-v2-onnx/: config.json
bert-tiny-onnx/: ort_config.json
optus-mt-zh-en-onnx/: config.json  decoder_model.onnx  decoder_model_merged.onnx  decoder_with_past_model.onnx  encoder_model.onnx  generation_config.json  ort_config.json
quantized_optus-mt-zh-en-onnx/: config.json  decoder_model_merged_quantized.onnx  decoder_model_quantized.onnx  decoder_with_past_model_quantized.onnx  encoder_model_quantized.onnx  ort_config.json
src/: main.rs
