[package]
name = "onnx-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ort = "1.15.2"
rand = "0.8.5"
tokenizers = "0.13.4"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
